--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,198 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Roboto&display=swap");
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+@import "./abstracts/variables";
+@import "./abstracts/mixins";
 
-html,
-body {
-  background: linear-gradient(45deg, #886be6, #ab98ec, #6941f7);
-  background-size: 200% 200%;
-  -webkit-animation: AnimationName 30s ease infinite;
-  -moz-animation: AnimationName 30s ease infinite;
-  animation: AnimationName 30s ease infinite;
-  @-webkit-keyframes AnimationName {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
-  }
-  @-moz-keyframes AnimationName {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
-  }
-  @keyframes AnimationName {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
-  }
+@import "./base/base";
+@import "./base/typrography";
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  width: 100vw;
-  font-family: "Roboto", sans-serif;
-}
 
-.wrapper {
-  background-color: #fff;
-  border-radius: 2rem;
-  width: 80vw;
-  height: 94vh;
-  display: flex;
-  box-shadow: #92929275 4px 4px 10px, #5f5f5f75 0 0 10px;
+@import "./components/form";
+@import "./components/card";
+@import "./components/alert";
 
-  .left-wrapper {
-    border-top-left-radius: 2rem;
-    border-bottom-left-radius: 2rem;
-    width: 50%;
-    padding: 50px;
-    h1 {
-      font-weight: 700;
-      font-size: 45px;
-      font-family: "Lobster", sans-serif;
-      color: #7e5bfd;
-      margin-bottom: 25px;
-    }
-    small {
-      color: rgb(184, 184, 184);
-      font-weight: 700;
-    }
-    .form {
-      margin-top: 25px;
-      .form-group {
-        margin-bottom: 25px;
-        position: relative;
-        label {
-          display: block;
-          color: rgb(189, 189, 189);
-          font-size: 14px;
-          font-weight: 700;
-          margin-left: 5px;
-          margin-bottom: 10px;
-        }
-        input,
-        textarea {
-          width: 100%;
-          padding: 15px;
-          border-radius: 10px;
-          border: none;
-          font-weight: 700;
-          color: #ab98ec;
-          resize: none;
-          background-color: rgb(243, 243, 243);
-          box-shadow: #b9b9b950 4px 4px 10px;
-          outline: none;
-          transition: all 0.75s;
-          border: transparent solid 1px;
 
-          &::placeholder {
-            color: #ab98ec;
-          }
-
-          &:focus {
-            border: #ab98ec solid 1px;
-            box-shadow: none;
-          }
-        }
-      }
-
-      .form-footer {
-        display: flex;
-        align-items: center;
-        .alert {
-          animation-name: FadeIn;
-          animation-duration: 1s;
-          transition-timing-function: linear;
-          display: flex;
-          padding: 10px;
-          align-items: center;
-          color: #666;
-          margin-bottom: 15px;
-          i {
-            color: rgb(255, 102, 102);
-            margin-right: 10px;
-          }
-        }
-
-        .button {
-          background-color: #6941f7;
-          display: block;
-          color: #fff;
-          font-size: 14px;
-          font-weight: 700;
-          margin-left: auto;
-          width: 150px;
-          padding: 13px 0px;
-          border-radius: 10px;
-          border: none;
-          transition: all 0.3s;
-          cursor: pointer;
-
-          &:hover {
-            background-color: #7e5bfd;
-          }
-        }
-      }
-    }
-  }
-
-  .inner-wrapper {
-    width: 50%;
-    padding: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-}
-
-// Success card
-.success-card {
-  text-align: center;
-  img {
-    width: 250px;
-    height: 250px;
-    object-fit: fill;
-    border-radius: 50%;
-    margin-bottom: 25px;
-    object-position: center;
-  }
-
-  h1 {
-    color: rgb(70, 141, 76);
-    margin-bottom: 15px;
-  }
-
-  p {
-    color: #444;
-  }
-}
-
-@keyframes FadeIn {
-  0% {
-    opacity: 0.2;
-  }
-  100% {
-    opacity: 1;
-  }
-}
